--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,112 @@
----
-theme :
-  name : slate
----
-{% include JB/setup %}
-{% include themes/slate/default.html %}
+<!DOCTYPE html>
+<!--
+       Zzzzz  |\      _,,,-~,,_
+              /,`.-'`'   ._  \-;;,_
+             |,4-  ) )_   .;.(  `'-'
+            '-~-''(_/._)-'(_\_)
+  _   __   _   ___ ___  _  _ _  ___  _     _   ___
+ / \ |  \ / \ | o \_ _|| || | || __|| |   / \ | o )
+| o || o ) o ||  _/| | | || V || _| | |_ | o || o \
+|_n_||__/|_n_||_|  |_| |_| \_/ |___||___||_n_||___/
+
+-->
+<html class='no-js page-methodology'>
+  <head>
+    <meta charset='utf-8'>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+
+    <title>Adaptive Lab | Helping big companies act like small ones</title>
+    <link href='http://www.adaptivelab.com/assets/favicon.png' rel='icon' type='image/png'>
+    <link href="http://www.adaptivelab.com/assets/application.css" media="all" rel="stylesheet" type="text/css" />
+    <script src="//maps.googleapis.com/maps/api/js?sensor=false&amp;key=AIzaSyCEkUxHIT3SDRUfIQIXOExhwp6rdrbHP-g" type="text/javascript"></script>
+    <script data-main="http://www.adaptivelab.com/assets/application.js" src="/assets/requirejs/require.js" type="text/javascript"></script>
+    <!--[if IE]>
+      <link href="/assets/css/ie.css" media="all" rel="stylesheet" type="text/css" />
+    <![endif]-->
+    <!--[if lt IE 9]>
+      <script src='/assets/libs/respond.min.js'></script>
+      <script src='/assets/libs/html5shiv.js'></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div id='container'>
+      <header>
+        <section>
+          <div class='adaptive-lab'>
+            <a href='/'>
+              <img alt='Adaptive Lab' src='http://www.adaptivelab.com/assets/adaptive-lab-symbol.png'>
+            </a>
+          </div>
+          <nav>
+            <ul>
+              <li class='left first'>
+                <a class="{% if page.custom_body_class == 'work' %}active{% endif %}" href='/work'>Work</a>
+              </li>
+              <li class='left'>
+                <a href='http://www.adaptivelab.com/#services'>Services</a>
+              </li>
+              <!-- %li.left -->
+              <!-- %a{ href: '/contact' } Culture -->
+              <li class='right last'>
+                <a class="{% if page.custom_body_class == 'contact' %}active{% endif %}" href='http://www.adaptivelab.com/contact'>Contact</a>
+              </li>
+              <li class='right'>
+                <a class="{% if page.custom_body_class == 'jobs' %}active{% endif %}" href='http://www.adaptivelab.com/jobs'>Jobs</a>
+              </li>
+              <li class='right'>
+                <a class="{% if page.custom_body_class == 'blog' %}active{% endif %}" href='http://www.adaptivelab.com/blog'>Blog</a>
+              </li>
+            </ul>
+          </nav>
+          <div id='open-nav-button'></div>
+        </section>
+      </header>
+      <section>
+        {{ content }}
+      </section>
+      <footer class='mega'>
+  <section>
+    <div class='cards simple'>
+      <div class='pair first'>
+        <div class='card social twitter first'>
+          <a href='https://twitter.com/adaptivelab' target='_blank'><span class="social"></span>@adaptivelab</a>
+        </div>
+        <div class='card social email'>
+          <a href='mailto:hey@adaptivelab.com'><span class="pictogram">📥</span>Email us</a>
+        </div>
+      </div>
+      <div class='pair'>
+        <div class='card social github first'>
+          <a href='https://github.com/adaptivelab' target='_blank'><span class="social"></span>Read our code</a>
+        </div>
+        <div class='card social phone'>
+          <a href='tel:02030110640'><span class="pictogram">📱</span>020 3011 0640</a>
+        </div>
+      </div>
+      <div class='pair last'>
+        <div class='card social linkedin first'>
+          <a href='https://www.linkedin.com/company/adaptivelab' target='_blank'><span class="social"></span>Find us on LinkedIn</a>
+        </div>
+        <div class='card social map'>
+          <a href='https://maps.google.co.uk/maps?q=EC2A+3HZ&amp;hl=en&amp;sll=51.525013,-0.082762&amp;sspn=0.006902,0.006212&amp;hnear=London+EC2A+3HZ,+United+Kingdom&amp;t=m&amp;z=16' target='_blank'><span class="pictogram"></span>Find us on a map</a>
+        </div>
+      </div>
+    </div>
+    <div class='adaptive-lab center'>
+      &copy; Adaptive Lab 2013
+    </div>
+  </section>
+</footer>
+      <script type='text/javascript'>
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-10931211-1']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+      </script>
+    </div>
+  </body>
+</html>
