Fixed the relative work link in the header.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
           <nav>
             <ul>
               <li class='left first'>
-                <a class="{% if page.custom_body_class == 'work' %}active{% endif %}" href='/work'>Work</a>
+                <a class="{% if page.custom_body_class == 'work' %}active{% endif %}" href='http://www.adaptivelab.com/work'>Work</a>
               </li>
               <li class='left'>
                 <a href='http://www.adaptivelab.com/#services'>Services</a>
