--- a/_includes/themes/slate/page.html
+++ b/_includes/themes/slate/page.html
@@ -1,7 +1,27 @@
-<h1>{{ page.title }}</h1>
+<nav class='subnav'>
+  <ul>
+    <!-- %li.left.first -->
+    <!-- %a{:href=>"/culture/people", :class=>""} -->
+    <!-- People -->
+    <li class='left first'>
+      <a href='/culture/handbook'>
+        Handbook
+      </a>
+    </li>
+    <li class='left'>
+      <a class="active" href='http://adaptivelab.github.io/'>
+        Methodology
+      </a>
+    </li>
+  </ul>
+</nav>
 
-{% if page.tagline %}
-<blockquote><p>{{ page.tagline }}</p></blockquote>
-{% endif %}
+<section>
+  <h1>{{ page.title }}</h1>
 
-{{ content }}
+  {% if page.tagline %}
+  <blockquote><p>{{ page.tagline }}</p></blockquote>
+  {% endif %}
+
+  {{ content }}
+</section>
