--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <!--
-       Zzzzz  |\      _,,,-~,,_
-              /,`.-'`'   ._  \-;;,_
-             |,4-  ) )_   .;.(  `'-'
-            '-~-''(_/._)-'(_\_)
-  _   __   _   ___ ___  _  _ _  ___  _     _   ___
- / \ |  \ / \ | o \_ _|| || | || __|| |   / \ | o )
-| o || o ) o ||  _/| | | || V || _| | |_ | o || o \
-|_n_||__/|_n_||_|  |_| |_| \_/ |___||___||_n_||___/
-
+            __..--''``---....___   _..._    __
+  /// //_.-'    .-/";  `        ``<._  ``.''_ `. / // /
+ ///_.-' _..--.'_    \                    `( ) ) // //
+ / (_..-' // (< _     ;_..__               ; `' / ///
+  / // // //  `-._,_)' // / ``--...____..-' /// / //
+    _   __   _   ___ ___  _  _ _  ___  _     _   ___
+   / \ |  \ / \ | o \_ _|| || | || __|| |   / \ | o )
+  | o || o ) o ||  _/| | | || V || _| | |_ | o || o \
+  |_n_||__/|_n_||_|  |_| |_| \_/ |___||___||_n_||___/
 -->
-<html class='no-js page-methodology'>
+<html class='no-js page-{{ page.custom_body_class }}'>
   <head>
     <meta charset='utf-8'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
@@ -34,36 +34,35 @@
         <section>
           <div class='adaptive-lab'>
             <a href='/'>
-              <img alt='Adaptive Lab' src='http://www.adaptivelab.com/assets/adaptive-lab-symbol.png'>
+              <img alt='Adaptive Lab' src='http://www.adaptivelab.com/assets/adaptive-lab-symbol.png'/>
             </a>
           </div>
           <nav>
             <ul>
               <li class='left first'>
-                <a class="{% if page.custom_body_class == 'work' %}active{% endif %}" href='http://www.adaptivelab.com/work'>Work</a>
+                <a href='http://www.adaptivelab.com/work'>Work</a>
               </li>
               <li class='left'>
                 <a href='http://www.adaptivelab.com/#services'>Services</a>
               </li>
-              <!-- %li.left -->
-              <!-- %a{ href: '/contact' } Culture -->
+              <li class='left'>
+                <a class="active" href='http://www.adaptivelab.com/culture/handbook'>Culture</a>
+              </li>
               <li class='right last'>
-                <a class="{% if page.custom_body_class == 'contact' %}active{% endif %}" href='http://www.adaptivelab.com/contact'>Contact</a>
+                <a href='http://www.adaptivelab.com/contact'>Contact</a>
               </li>
               <li class='right'>
-                <a class="{% if page.custom_body_class == 'jobs' %}active{% endif %}" href='http://www.adaptivelab.com/jobs'>Jobs</a>
+                <a href='http://www.adaptivelab.com/jobs'>Jobs</a>
               </li>
               <li class='right'>
-                <a class="{% if page.custom_body_class == 'blog' %}active{% endif %}" href='http://www.adaptivelab.com/blog'>Blog</a>
+                <a href='http://www.adaptivelab.com/blog'>Blog</a>
               </li>
             </ul>
           </nav>
           <div id='open-nav-button'></div>
         </section>
       </header>
-      <section>
-        {{ content }}
-      </section>
+      {{ content }}
       <footer class='mega'>
   <section>
     <div class='cards simple'>
