--- a/_includes/themes/slate/page.html
+++ b/_includes/themes/slate/page.html
@@ -4,7 +4,7 @@
     <!-- %a{:href=>"/culture/people", :class=>""} -->
     <!-- People -->
     <li class='left first'>
-      <a href='/culture/handbook'>
+      <a href='http://www.adaptivelab.com/culture/handbook'>
         Handbook
       </a>
     </li>
