--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   | o || o ) o ||  _/| | | || V || _| | |_ | o || o \
   |_n_||__/|_n_||_|  |_| |_| \_/ |___||___||_n_||___/
 -->
-<html class='no-js page-{{ page.custom_body_class }}'>
+<html class='no-js page-culture'>
   <head>
     <meta charset='utf-8'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
