--- a/_includes/themes/slate/page.html
+++ b/_includes/themes/slate/page.html
@@ -23,7 +23,7 @@
   <blockquote><p>{{ page.tagline }}</p></blockquote>
   {% endif %}
 
-  <section>
+  <section class="handbook">
     {{ content }}
   </section>
 </section>
