CSS hack to get it to look ok.

--- a/_includes/themes/slate/page.html
+++ b/_includes/themes/slate/page.html
@@ -1,5 +1,5 @@
 <section>
-  <nav class='subnav'>
+  <nav class='subnav' style="margin-top: 2em;">
   <ul>
       <!-- %li.left.first -->
       <!-- %a{:href=>"/culture/people", :class=>""} -->
@@ -23,7 +23,7 @@
   <blockquote><p>{{ page.tagline }}</p></blockquote>
   {% endif %}
 
-  <section class="handbook">
+  <section>
     {{ content }}
   </section>
 </section>
