--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,10 @@
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
 
     <title>Adaptive Lab | Helping big companies act like small ones</title>
-    <link href='http://www.adaptivelab.com/assets/favicon.png' rel='icon' type='image/png'>
-    <link href="http://www.adaptivelab.com/assets/application.css" media="all" rel="stylesheet" type="text/css" />
+    <link href='https://www.adaptivelab.com/assets/favicon.png' rel='icon' type='image/png'>
+    <link href="https://www.adaptivelab.com/assets/application.css" media="all" rel="stylesheet" type="text/css" />
     <script src="//maps.googleapis.com/maps/api/js?sensor=false&amp;key=AIzaSyCEkUxHIT3SDRUfIQIXOExhwp6rdrbHP-g" type="text/javascript"></script>
-    <script data-main="http://www.adaptivelab.com/assets/application.js" src="/assets/requirejs/require.js" type="text/javascript"></script>
+    <script src="https://www.adaptivelab.com/assets/application.js" type="text/javascript"></script>
     <!--[if IE]>
       <link href="/assets/css/ie.css" media="all" rel="stylesheet" type="text/css" />
     <![endif]-->
