--- a/_includes/themes/slate/page.html
+++ b/_includes/themes/slate/page.html
@@ -1,18 +1,20 @@
 <section>
   <nav class='subnav' style="margin-top: 2em;">
   <ul>
-      <!-- %li.left.first -->
-      <!-- %a{:href=>"/culture/people", :class=>""} -->
-      <!-- People -->
       <li class='left first'>
-        <a href='http://www.adaptivelab.com/culture/handbook'>
-          Handbook
-        </a>
+          <a class="" href='https://www.adaptivelab.com/culture/people'>
+              People
+          </a>
       </li>
       <li class='left'>
-        <a class="active" href='http://adaptivelab.github.io/'>
-          Methodology
-        </a>
+          <a class="" href='https://www.adaptivelab.com/culture/handbook'>
+              Handbook
+          </a>
+      </li>
+      <li class='left'>
+          <a class="active" href='http://adaptivelab.github.io/'>
+              Methodology
+          </a>
       </li>
     </ul>
   </nav>
