--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,10 @@ custom_body_class: culture
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
 
     <title>Adaptive Lab | {%if page.title %}{{page.title}}{% else %}Helping big companies act like small ones{% endif %}</title>
-    <link href='https://www.adaptivelab.com/assets/favicon.png' rel='icon' type='image/png'>
-    <link href="https://www.adaptivelab.com/assets/application.css" media="all" rel="stylesheet" type="text/css" />
+    <link href='http://localhost:3000/assets/favicon.png' rel='icon' type='image/png'>
+    <link href="http://localhost:3000/assets/application.css" media="all" rel="stylesheet" type="text/css" />
     <script src="//maps.googleapis.com/maps/api/js?sensor=false&amp;key=AIzaSyCEkUxHIT3SDRUfIQIXOExhwp6rdrbHP-g" type="text/javascript"></script>
-    <script src="https://www.adaptivelab.com/assets/application.js" type="text/javascript"></script>
+    <script src="http://localhost:3000/assets/application.js" type="text/javascript"></script>
     <!--[if IE]>
       <link href="https://www.adaptivelab.com/assets/css/ie.css" media="all" rel="stylesheet" type="text/css" />
     <![endif]-->
@@ -47,7 +47,7 @@ custom_body_class: culture
           <nav>
             <ul>
               <li class='first'>
-                <a class="{% if page.custom_body_class == 'work' %}active{% endif %}" href='http://adaptivelab.com/work'>
+                <a class="{% if page.custom_body_class == 'work' %}active{% endif %}" href='http://localhost:3000/work'>
                   <div class='label'>Work</div>
                 </a>
               </li>
@@ -57,22 +57,22 @@ custom_body_class: culture
                 </a>
               </li>
               <li>
-                <a class="{% if page.custom_body_class == 'culture' %}active{% endif %}" href='http://adaptivelab.com/culture/people'>
+                <a class="{% if page.custom_body_class == 'culture' %}active{% endif %}" href='http://localhost:3000//culture/handbook'>
                   <div class='label'>Culture</div>
                 </a>
               </li>
               <li>
-                <a class="{% if page.custom_body_class == 'blog' %}active{% endif %}" href='http://adaptivelab.com/blog'>
+                <a class="{% if page.custom_body_class == 'blog' %}active{% endif %}" href='http://localhost:3000/blog'>
                   <div class='label'>Blog</div>
                 </a>
               </li>
               <li>
-                <a class="{% if page.custom_body_class == 'contact' %}active{% endif %}" href='http://adaptivelab.com/contact'>
+                <a class="{% if page.custom_body_class == 'contact' %}active{% endif %}" href='http://localhost:3000/contact'>
                   <div class='label'>Contact</div>
                 </a>
               </li>
               <li>
-                <a class="{% if page.custom_body_class == 'jobs' %}active{% endif %}" href='http://adaptivelab.com/jobs'>
+                <a class="{% if page.custom_body_class == 'jobs' %}active{% endif %}" href='http://localhost:3000/jobs'>
                   <div class='label'>Jobs</div>
                 </a>
               </li>
