--- a/_includes/themes/slate/page.html
+++ b/_includes/themes/slate/page.html
@@ -1,20 +1,20 @@
 <section>
-  <nav class='subnav' style="margin-top: 2em;">
-  <ul>
-      <li class='left first'>
-          <a class="" href='https://www.adaptivelab.com/culture/people'>
-              People
-          </a>
+  <nav class="subnav" style="margin-top: 2em;">
+    <ul>
+      <li class="left first">
+        <a href="http://localhost:3000/culture/people">
+          People
+        </a>
       </li>
-      <li class='left'>
-          <a class="" href='https://www.adaptivelab.com/culture/handbook'>
-              Handbook
-          </a>
+      <li class="left">
+        <a href="http://localhost:3000/culture/handbook">
+          Handbook
+        </a>
       </li>
-      <li class='left'>
-          <a class="active" href='http://adaptivelab.github.io/'>
-              Methodology
-          </a>
+      <li class="left">
+        <a class="active" href="http://localhost:4000">
+          Methodology
+        </a>
       </li>
     </ul>
   </nav>
