--- a/_includes/themes/slate/page.html
+++ b/_includes/themes/slate/page.html
@@ -1,3 +1,4 @@
+<div class="clearfix"></div>
 <section>
   <nav class="subnav" style="margin-top: 2em;">
     <ul>
@@ -19,13 +20,7 @@
     </ul>
   </nav>
 
-  <h1>{{ page.title }}</h1>
-
-  {% if page.tagline %}
-  <blockquote><p>{{ page.tagline }}</p></blockquote>
-  {% endif %}
-
-  <section>
+  <div>
     {{ content }}
-  </section>
+  </div>
 </section>
