--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@ custom_body_class: culture
     <link href="http://localhost:3000/assets/application.css" media="all" rel="stylesheet" type="text/css" />
     <script src="//maps.googleapis.com/maps/api/js?sensor=false&amp;key=AIzaSyCEkUxHIT3SDRUfIQIXOExhwp6rdrbHP-g" type="text/javascript"></script>
     <script src="http://localhost:3000/assets/application.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <!--[if IE]>
       <link href="https://www.adaptivelab.com/assets/css/ie.css" media="all" rel="stylesheet" type="text/css" />
     <![endif]-->
@@ -57,7 +58,7 @@ custom_body_class: culture
                 </a>
               </li>
               <li>
-                <a class="{% if page.custom_body_class == 'culture' %}active{% endif %}" href='http://localhost:3000//culture/handbook'>
+                <a class="active" href='http://localhost:3000//culture/handbook'>
                   <div class='label'>Culture</div>
                 </a>
               </li>
@@ -153,6 +154,33 @@ custom_body_class: culture
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
+      </script>
+      <script type="text/javascript">
+        (function($) {
+
+          $('.Accordion--top dd').hide();
+          $('.Accordion--top dt').addClass("Accordion__toggle--closed");
+
+          $('.Accordion--top dt').click(function() {
+            toggleAccordionElementState($(this));
+            showOrHideAccordionContent($(this));
+            return false;
+          });
+
+          function toggleAccordionElementState(accordionElement) {
+            accordionElement.toggleClass("Accordion__toggle--closed Accordion__toggle--open");
+          }
+
+          function showOrHideAccordionContent(accordionElement) {
+            if(accordionElement.hasClass("Accordion__toggle--open")) {
+              accordionElement.next().slideDown();
+            }
+
+            if(accordionElement.hasClass("Accordion__toggle--closed")) {
+              accordionElement.next().slideUp();
+            }
+          }
+        })($);
       </script>
     </div>
   </body>
