Change css url to s3 bucket

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
     <title>Adaptive Lab | Helping big companies act like small ones</title>
     <link href='https://www.adaptivelab.com/assets/favicon.png' rel='icon' type='image/png'>
-    <link href="https://www.adaptivelab.com/assets/application.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="https://s3-eu-west-1.amazonaws.com/adaptivelab-old-css/application.css" media="all" rel="stylesheet" type="text/css" />
     <script src="//maps.googleapis.com/maps/api/js?sensor=false&amp;key=AIzaSyCEkUxHIT3SDRUfIQIXOExhwp6rdrbHP-g" type="text/javascript"></script>
     <script src="https://www.adaptivelab.com/assets/application.js" type="text/javascript"></script>
     <!--[if IE]>
