--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,22 +16,22 @@ custom_body_class: culture
   | o || o ) o ||  _/| | | || V || _| | |_ | o || o \
   |_n_||__/|_n_||_|  |_| |_| \_/ |___||___||_n_||___/
 -->
-<html class='no-js page-methodology'>
+<html class='no-js page-{{ page.custom_body_class }}'>
   <head>
     <meta charset='utf-8'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
 
-    <title>Adaptive Lab | Helping big companies act like small ones</title>
+    <title>Adaptive Lab | {%if page.title %}{{page.title}}{% else %}Helping big companies act like small ones{% endif %}</title>
     <link href='https://www.adaptivelab.com/assets/favicon.png' rel='icon' type='image/png'>
-    <link href="http://www.adaptivelab.com/assets/application.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="https://www.adaptivelab.com/assets/application.css" media="all" rel="stylesheet" type="text/css" />
     <script src="//maps.googleapis.com/maps/api/js?sensor=false&amp;key=AIzaSyCEkUxHIT3SDRUfIQIXOExhwp6rdrbHP-g" type="text/javascript"></script>
     <script src="https://www.adaptivelab.com/assets/application.js" type="text/javascript"></script>
     <!--[if IE]>
-      <link href="/assets/css/ie.css" media="all" rel="stylesheet" type="text/css" />
+      <link href="https://www.adaptivelab.com/assets/css/ie.css" media="all" rel="stylesheet" type="text/css" />
     <![endif]-->
     <!--[if lt IE 9]>
-      <script src='/assets/libs/respond.min.js'></script>
-      <script src='/assets/libs/html5shiv.js'></script>
+      <script src='https://www.adaptivelab.com/assets/libs/respond.min.js'></script>
+      <script src='https://www.adaptivelab.com/assets/libs/html5shiv.js'></script>
     <![endif]-->
   </head>
   <body>
@@ -143,7 +143,8 @@ custom_body_class: culture
             </div>
           </div>
         </section>
-      </footer>      <script type='text/javascript'>
+      </footer>
+      <script type='text/javascript'>
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-10931211-1']);
         _gaq.push(['_trackPageview']);
