Fixed relative links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,39 +55,39 @@
 <div class='mobile-nav-spacer'></div>
 <ul>
 <li class='first'>
-<a class="{% if page.custom_body_class == 'work' %}active{% endif %}" href='/work'>
+<a class="{% if page.custom_body_class == 'work' %}active{% endif %}" href='https://www.adaptivelab.com/work'>
 <div class='label'>Work</div>
 </a>
 </li>
 <li>
-<a class="{% if page.custom_body_class == 'services' %}active{% endif %}" href='/services'>
+<a class="{% if page.custom_body_class == 'services' %}active{% endif %}" href='https://www.adaptivelab.com/services'>
 <div class='label'>Services</div>
 </a>
 </li>
 <li>
-<a class="{% if page.custom_body_class == 'culture' %}active{% endif %}" href='/culture/people'>
+<a class="{% if page.custom_body_class == 'culture' %}active{% endif %}" href='https://www.adaptivelab.com/culture/people'>
 <div class='label'>Culture</div>
 </a>
 </li>
 <li>
-<a class="{% if page.custom_body_class == 'blog' %}active{% endif %}" href='/blog'>
+<a class="{% if page.custom_body_class == 'blog' %}active{% endif %}" href='https://www.adaptivelab.com/blog'>
 <div class='label'>Blog</div>
 </a>
 </li>
 <li>
-<a class="{% if page.custom_body_class == 'contact' %}active{% endif %}" href='/contact'>
+<a class="{% if page.custom_body_class == 'contact' %}active{% endif %}" href='https://www.adaptivelab.com/contact'>
 <div class='label'>Contact</div>
 </a>
 </li>
 <li>
-<a class="{% if page.custom_body_class == 'jobs' %}active{% endif %}" href='/jobs'>
+<a class="{% if page.custom_body_class == 'jobs' %}active{% endif %}" href='https://www.adaptivelab.com/jobs'>
 <div class='label'>Jobs</div>
 </a>
 </li>
 </ul>
 </nav>
 <div class='adaptive-lab-logo'>
-<a href='/'>
+<a href='https://www.adaptivelab.com/'>
 <span>Adaptive Lab</span>
 </a>
 </div>
@@ -116,7 +116,7 @@
 <div class='columns wide'>
 <div class='column narrow center last'>
 <div class='adaptive-lab-logo'>
-<a href='/'>
+<a href='https://www.adaptivelab.com/'>
 <span>Adaptive Lab</span>
 </a>
 </div>
