--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,187 +1,183 @@
 ---
-custom_body_class: culture
+custom_body_class: methodology
 ---
 <!DOCTYPE html>
 <!--
-   ____
-  (.   \
-    \  |
-     \ |___(\--/)
-   __/    (  . . )
-  "'._.    '-.O.'
-       '-.  \ "|\
-          '.,,/'.,,mrf
-    _   __   _   ___ ___  _  _ _  ___  _     _   ___
-   / \ |  \ / \ | o \_ _|| || | || __|| |   / \ | o )
-  | o || o ) o ||  _/| | | || V || _| | |_ | o || o \
-  |_n_||__/|_n_||_|  |_| |_| \_/ |___||___||_n_||___/
+                   .               ,.
+                  T."-._..---.._,-"/|
+                  l|"-.  _.v._   (" |
+                  [l /.'_ \; _~"-.`-t
+                  Y " _(o} _{o)._ ^.|
+                  j  T  ,-<v>-.  T  ]
+                  \  l ( /-^-\ ) !  !
+                   \. \.  "~"  ./  /c-..,__
+                     ^r- .._ .- .-"  `- .  ~"--.
+                      > \.                      \
+                      ]   ^.                     \
+                      3  .  ">            .       Y
+         ,.__.--._   _j   \ ~   .         ;       |
+        (    ~"-._~"^._\   ^.    ^._      I     . l
+         "-._ ___ ~"-,_7    .Z-._   7"   Y      ;  \        _
+            /"   "~-(r r  _/_--._~-/    /      /,.--^-._   / Y
+            "-._    '"~~~>-._~]>--^---./____,.^~        ^.^  !
+                ~--._    '   Y---.                        \./
+                     ~~--._  l_   )                        \
+                           ~-._~~~---._,____..---           \
+                               ~----"~       \
+                                              \
+                                    _   __   _   ___ ___  _  _ _  ___  _     _   ___
+                                   / \ |  \ / \ | o \_ _|| || | || __|| |   / \ | o )
+                                  | o || o ) o ||  _/| | | || V || _| | |_ | o || o \
+                                  |_n_||__/|_n_||_|  |_| |_| \_/ |___||___||_n_||___/
 -->
+
 <html class='no-js page-{{ page.custom_body_class }}'>
-  <head>
-    <meta charset='utf-8'>
-    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+<head>
+<meta charset='utf-8'>
+<meta content='width=device-width, initial-scale=1.0' name='viewport'>
 
-    <title>Adaptive Lab | {%if page.title %}{{page.title}}{% else %}Helping big companies act like small ones{% endif %}</title>
-    <link href='http://localhost:3000/assets/favicon.png' rel='icon' type='image/png'>
-    <link href="http://localhost:3000/assets/application.css" media="all" rel="stylesheet" type="text/css" />
-    <script src="//maps.googleapis.com/maps/api/js?sensor=false&amp;key=AIzaSyCEkUxHIT3SDRUfIQIXOExhwp6rdrbHP-g" type="text/javascript"></script>
-    <script src="http://localhost:3000/assets/application.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <!--[if IE]>
-      <link href="https://www.adaptivelab.com/assets/css/ie.css" media="all" rel="stylesheet" type="text/css" />
-    <![endif]-->
-    <!--[if lt IE 9]>
-      <script src='https://www.adaptivelab.com/assets/libs/respond.min.js'></script>
-      <script src='https://www.adaptivelab.com/assets/libs/html5shiv.js'></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div id='container'>
-      <header>
-        <section>
-          <div class='adaptive-lab'>
-            <a href='http://www.adaptivelab.com/'>
-              <img alt='Adaptive Lab' src='https://s3-eu-west-1.amazonaws.com/adaptivelab-blog-images/assets/adaptive-lab-symbol.png'>
-              <span>Adaptive Lab</span>
-            </a>
-          </div>
-          <nav>
-            <ul>
-              <li class='first'>
-                <a class="{% if page.custom_body_class == 'work' %}active{% endif %}" href='http://localhost:3000/work'>
-                  <div class='label'>Work</div>
-                </a>
-              </li>
-              <li>
-                <a class="{% if page.custom_body_class == 'services' %}active{% endif %}" href='http://adaptivelab.com/services'>
-                  <div class='label'>Services</div>
-                </a>
-              </li>
-              <li>
-                <a class="active" href='http://localhost:3000//culture/handbook'>
-                  <div class='label'>Culture</div>
-                </a>
-              </li>
-              <li>
-                <a class="{% if page.custom_body_class == 'blog' %}active{% endif %}" href='http://localhost:3000/blog'>
-                  <div class='label'>Blog</div>
-                </a>
-              </li>
-              <li>
-                <a class="{% if page.custom_body_class == 'contact' %}active{% endif %}" href='http://localhost:3000/contact'>
-                  <div class='label'>Contact</div>
-                </a>
-              </li>
-              <li>
-                <a class="{% if page.custom_body_class == 'jobs' %}active{% endif %}" href='http://localhost:3000/jobs'>
-                  <div class='label'>Jobs</div>
-                </a>
-              </li>
-            </ul>
-          </nav>
-          <div id='open-nav-button'></div>
-        </section>
-      </header>
-      {{ content }}
-      <footer class='mega'>
-        <section class='image-block'>
-          <div class='image-overlay arrow top'>
-            <img alt='footer arrow' src='https://s3-eu-west-1.amazonaws.com/adaptivelab-blog-images/case-study/footer-arrow.png'>
-          </div>
-        </section>
-        <section>
-          <div class='newsletter_sign_up_form'>
-            <h2>Wunderkammer</h2>
-            <small>A fortnightly email of internetty goodness curated by our team.</small>
-            <form action='http://adaptivelab.us7.list-manage.com/subscribe/post?u=ba4bd34288db889e5ee0ae1aa&amp;amp;id=2aaa756163' method='post' target='_blank'>
-              <input name='EMAIL' placeholder='Email' type='email' value=''>
-              <input name='subscribe' type='submit' value='Sign Up'>
-            </form>
-          </div>
-          <div class='columns wide'>
-            <div class='column narrow center last'>
-              <p class='right adaptive-lab'>
-                <a href='http://www.adaptivelab.com/'>
-                  <img alt='Adaptive Lab' src='https://s3-eu-west-1.amazonaws.com/adaptivelab-blog-images/assets/adaptive-lab-symbol.png'>
-                  <span>Adaptive Lab</span>
-                </a>
-              </p>
-            </div>
-            <div class='column narrow first'>
-              <div class='contact'>
-                <p>
-                  <li>Second Floor</li>
-                  <li>91-93 Great Eastern Street</li>
-                  <li>London</li>
-                  <li>EC2A 3HZ</li>
-                </p>
-                <p>
-                  <li>020 3011 0640</li>
-                  <li>
-                    <a href='mailto:hey@adaptivelab.co.uk'>hey@adaptivelab.com</a>
-                  </li>
-                </p>
-              </div>
-            </div>
-            <div class='column narrow'>
-              <div class='social'>
-                <li>
-                  <div class='twitter'>
-                    <a href='https://twitter.com/adaptivelab' target='_blank'>@adaptivelab</a>
-                  </div>
-                </li>
-                <li>
-                  <div class='github'>
-                    <a href='https://github.com/adaptivelab' target='_blank'>adaptivelab</a>
-                  </div>
-                </li>
-                <li>
-                  <div class='methodology'>
-                    <a href='http://adaptivelab.github.io/' target='_blank'>Our development methodology</a>
-                  </div>
-                </li>
-              </div>
-            </div>
-          </div>
-        </section>
-      </footer>
-      <script type='text/javascript'>
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-10931211-1']);
-        _gaq.push(['_trackPageview']);
-        (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-      </script>
-      <script type="text/javascript">
-        (function($) {
+<title>Adaptive Lab | {%if page.title %}{{page.title}}{% else %}Helping big companies act like small ones{% endif %}</title>
+<link href='/assets/favicon.png' rel='icon' type='image/png'>
+<script src="//maps.googleapis.com/maps/api/js?sensor=false&amp;key=AIzaSyCEkUxHIT3SDRUfIQIXOExhwp6rdrbHP-g" type="text/javascript"></script>
+<link href="http://localhost:5000/assets/application.css" media="all" rel="stylesheet" type="text/css" />
+<script src="http://localhost:5000/assets/application.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<link href="/assets/stylesheets/pygments.css" media="all" rel="stylesheet" type="text/css" />
+<link href="/assets/stylesheets/main.css" media="all" rel="stylesheet" type="text/css" />
+<script src="/assets/javascripts/main.js" type="text/javascript"></script>
+<!--[if IE]>
+<link href="/assets/css/ie.css" media="all" rel="stylesheet" type="text/css" />
+<![endif]-->
+<!--[if lt IE 9]>
+<script src='/assets/libs/respond.min.js'></script>
+<script src='/assets/libs/html5shiv.js'></script>
+<![endif]-->
+</head>
+<body>
+<div id='container'>
+<header>
+<section>
+<div class='nav-bar'></div>
+<nav id='main-nav'>
+<div class='mobile-nav-spacer'></div>
+<ul>
+<li class='first'>
+<a class="{% if page.custom_body_class == 'work' %}active{% endif %}" href='/work'>
+<div class='label'>Work</div>
+</a>
+</li>
+<li>
+<a class="{% if page.custom_body_class == 'services' %}active{% endif %}" href='/services'>
+<div class='label'>Services</div>
+</a>
+</li>
+<li>
+<a class="{% if page.custom_body_class == 'culture' %}active{% endif %}" href='/culture/people'>
+<div class='label'>Culture</div>
+</a>
+</li>
+<li>
+<a class="{% if page.custom_body_class == 'blog' %}active{% endif %}" href='/blog'>
+<div class='label'>Blog</div>
+</a>
+</li>
+<li>
+<a class="{% if page.custom_body_class == 'contact' %}active{% endif %}" href='/contact'>
+<div class='label'>Contact</div>
+</a>
+</li>
+<li>
+<a class="{% if page.custom_body_class == 'jobs' %}active{% endif %}" href='/jobs'>
+<div class='label'>Jobs</div>
+</a>
+</li>
+</ul>
+</nav>
+<div class='adaptive-lab-logo'>
+<a href='/'>
+<span>Adaptive Lab</span>
+</a>
+</div>
+<div id='open-nav-button'></div>
+</section>
+</header>
+<div class='clearfix'></div>
 
-          $('.Accordion--top dd').hide();
-          $('.Accordion--top dt').addClass("Accordion__toggle--closed");
+{{ content }}
+<footer class='mega'>
+<section class='image-block'>
+<div class='image-overlay arrow top'>
+<img alt='footer arrow' src='https://s3-eu-west-1.amazonaws.com/adaptivelab-blog-images/case-study/footer-arrow.png'>
+</div>
+</section>
+<section>
+<div class='newsletter_sign_up_form'>
+<h2>Wunderkammer</h2>
+<small>A fortnightly email of internetty goodness curated by our team.</small>
+<form action='http://adaptivelab.us7.list-manage.com/subscribe/post?u=ba4bd34288db889e5ee0ae1aa&amp;amp;id=2aaa756163' method='post' target='_blank'>
+<input name='EMAIL' placeholder='Email' type='email' value=''>
+<input name='subscribe' type='submit' value='Sign Up'>
+</form>
+</div>
 
-          $('.Accordion--top dt').click(function() {
-            toggleAccordionElementState($(this));
-            showOrHideAccordionContent($(this));
-            return false;
-          });
+<div class='columns wide'>
+<div class='column narrow center last'>
+<div class='adaptive-lab-logo'>
+<a href='/'>
+<span>Adaptive Lab</span>
+</a>
+</div>
+&nbsp;
+</div>
+<div class='column narrow first'>
+<div class='contact'>
+<p>
+<li>Second Floor</li>
+<li>91-93 Great Eastern Street</li>
+<li>London</li>
+<li>EC2A 3HZ</li>
+</p>
+<p>
+<li>020 3011 0640</li>
+<li>
+<a href='mailto:hey@adaptivelab.co.uk'>hey@adaptivelab.com</a>
+</li>
+</p>
+</div>
+</div>
+<div class='column narrow'>
+<div class='social'>
+<li>
+<div class='twitter'>
+<a href='https://twitter.com/adaptivelab' target='_blank'>@adaptivelab</a>
+</div>
+</li>
+<li>
+<div class='github'>
+<a href='https://github.com/adaptivelab' target='_blank'>adaptivelab</a>
+</div>
+</li>
+<li>
+<div class='methodology'>
+<a href='http://adaptivelab.github.io/' target='_blank'>Our development methodology</a>
+</div>
+</li>
+</div>
+</div>
+</div>
+</section>
+</footer>
 
-          function toggleAccordionElementState(accordionElement) {
-            accordionElement.toggleClass("Accordion__toggle--closed Accordion__toggle--open");
-          }
-
-          function showOrHideAccordionContent(accordionElement) {
-            if(accordionElement.hasClass("Accordion__toggle--open")) {
-              accordionElement.next().slideDown();
-            }
-
-            if(accordionElement.hasClass("Accordion__toggle--closed")) {
-              accordionElement.next().slideUp();
-            }
-          }
-        })($);
-      </script>
-    </div>
-  </body>
+<script type='text/javascript'>
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-10931211-1']);
+_gaq.push(['_trackPageview']);
+(function() {
+var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+</script>
+</div>
+</body>
 </html>
