Rebased and squashed earlier WIP onto develop

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,43 +1,49 @@
+---
+custom_body_class: methodology
+---
 <!DOCTYPE html>
 <!--
-                  ._
-              .-'  `-.
-           .-'        \
-          ;    .-'\    ;
-          `._.'    ;   |
-                   |   |
-                   ;   :
-                  ;   :
-                  ;   :
-                 /   /
-                ;   :                   ,
-                ;   |               .-"7|
-              .-'"  :            .-' .' :
-           .-'       \         .'  .'   `.
-         .'           `-. ""-.-'`""    `",`-._..--"7
-         ;    .          `-.J `-,    ;"`.;|,_,    ;
-       _.'    |         `"" `. ."""--. o \:.-. _.'
-    .""       :            ,--`;   ,  `--/}o,' ;
-    ;   .___.'        /     ,--.`-. `-..7_.-  /_
-     \   :   `..__.._;    .'__;    `---..__.-'-.`"-,
-     .'   `--. |   \_;    \'   `-._.-")     \\  `-,
-     `.   -.`_):      `.   `-"""`.   ;__.' ;/ ;   "
-       `-.__7"  `-..._.'`7     -._;'  ``"-''
-                         `--.,__.'  _   __   _   ___ ___  _  _ _  ___  _     _   ___
+                   .               ,.
+                  T."-._..---.._,-"/|
+                  l|"-.  _.v._   (" |
+                  [l /.'_ \; _~"-.`-t
+                  Y " _(o} _{o)._ ^.|
+                  j  T  ,-<v>-.  T  ]
+                  \  l ( /-^-\ ) !  !
+                   \. \.  "~"  ./  /c-..,__
+                     ^r- .._ .- .-"  `- .  ~"--.
+                      > \.                      \
+                      ]   ^.                     \
+                      3  .  ">            .       Y
+         ,.__.--._   _j   \ ~   .         ;       |
+        (    ~"-._~"^._\   ^.    ^._      I     . l
+         "-._ ___ ~"-,_7    .Z-._   7"   Y      ;  \        _
+            /"   "~-(r r  _/_--._~-/    /      /,.--^-._   / Y
+            "-._    '"~~~>-._~]>--^---./____,.^~        ^.^  !
+                ~--._    '   Y---.                        \./
+                     ~~--._  l_   )                        \
+                           ~-._~~~---._,____..---           \
+                               ~----"~       \
+                                              \
+                                    _   __   _   ___ ___  _  _ _  ___  _     _   ___
                                    / \ |  \ / \ | o \_ _|| || | || __|| |   / \ | o )
                                   | o || o ) o ||  _/| | | || V || _| | |_ | o || o \
                                   |_n_||__/|_n_||_|  |_| |_| \_/ |___||___||_n_||___/
 -->
-
 <html class='no-js page-{{ page.custom_body_class }}'>
 <head>
 <meta charset='utf-8'>
 <meta content='width=device-width, initial-scale=1.0' name='viewport'>
 
 <title>Adaptive Lab | {%if page.title %}{{page.title}}{% else %}Helping big companies act like small ones{% endif %}</title>
-<link href='https://www.adaptivelab.com/assets/favicon.png' rel='icon' type='image/png'>
-<link href="https://www.adaptivelab.com/assets/application-87cf2c5275f004c6f7d06255ca02d9a0.css" media="all" rel="stylesheet" type="text/css" />
-<script src="https://www.adaptivelab.com/assets/application-0f6f7d924190028f2ebd6b215a95e012.js" type="text/javascript"></script>
+<link href='/assets/favicon.png' rel='icon' type='image/png'>
+<script src="//maps.googleapis.com/maps/api/js?sensor=false&amp;key=AIzaSyCEkUxHIT3SDRUfIQIXOExhwp6rdrbHP-g" type="text/javascript"></script>
+<link href="http://localhost:5000/assets/application.css" media="all" rel="stylesheet" type="text/css" />
+<script src="http://localhost:5000/assets/application.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<link href="/assets/stylesheets/pygments.css" media="all" rel="stylesheet" type="text/css" />
+<link href="/assets/stylesheets/main.css" media="all" rel="stylesheet" type="text/css" />
+<script src="/assets/javascripts/main.js" type="text/javascript"></script>
 <!--[if IE]>
 <link href="https://www.adaptivelab.com/assets/css/ie.css" media="all" rel="stylesheet" type="text/css" />
 <![endif]-->
