--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@ custom_body_class: methodology
 <script src="http://localhost:5000/assets/application.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <link href="/assets/stylesheets/pygments.css" media="all" rel="stylesheet" type="text/css" />
+<link href="/assets/stylesheets/entypo.css" media="all" rel="stylesheet" type="text/css" />
 <link href="/assets/stylesheets/main.css" media="all" rel="stylesheet" type="text/css" />
 <script src="/assets/javascripts/main.js" type="text/javascript"></script>
 <!--[if IE]>
